# CostTracking

./: .gitignore  ACCURACY_AND_CLI_TRUTH.md  ACTUAL_DEBUG.md  ADD_PRICING_GUIDE.md  AGENT_DETECTION_EXPLAINED.md  AGENT_TREE_EXPLANATION.md  ANTHROPIC_FIX_PLAN.md  ANTHROPIC_TEST_RESULTS.md  API_KEY_SOLUTION.md  API_PRICING_GUIDE.md  ARCHITECTURE.md  AUTHENTICATION_AND_SAAS_SUPPORT.md  AUTOMATIC_DETECTION_CLARIFICATION.md  AUTO_AGENT_DETECTION.md  AUTO_INSTRUMENTATION_VS_TAGGING.md  BUILD_SESSION_SUMMARY.md  CAPS_ALERTS_SUMMARY.md  CLERK_INTEGRATION_SUMMARY.md  CLERK_SETUP_GUIDE.md  CLI_ROLE_EXPLAINED.md  CLOUDFLARE_SETUP.md  CLOUD_STORAGE_PRICING_GUIDE.md  COLLECTOR_RESTART_INSTRUCTIONS.md  COMPLETION_STATUS.md  COMPREHENSIVE_TEST_RESULTS.md  CONNECT_VERCEL_GITHUB.md  COST_ACCURACY_EXPLANATION.md  CO_FOUNDER_BRIEFING.md  DASHBOARD_404_FIX.md  DASHBOARD_CONTENT_FIX.md  DASHBOARD_FIX.md  DASHBOARD_FIXES.md  DATABASE_MIGRATION.md  DATABASE_SETUP_INSTRUCTIONS.md  DEBUG_CHECKLIST.md  DEPLOYED_API_KEY_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READINESS.md  DEPLOYMENT_TEST_REPORT.md  (+184 more)
collector/: .env.backup  Dockerfile  Procfile  RAILWAY_TROUBLESHOOTING.md  __init__.py  auth.py  cap_alerts.py  cap_monitor.py  clerk_auth.py  db.py  deploy_railway.sh  email_service.py  main.py  migrate_add_stripe_columns.py  migrate_add_voice_platform.py  migrate_db.py  migration_stripe_columns.sql  models.py  nixpacks.toml  pricing.py  pyproject.toml  railway.json  railway_deploy_now.sh  requirements.txt  run_migration.sh  run_voice_platform_migration.py
collector/pricing/: registry.json
collector/routers/: __init__.py  api_keys.py  auth.py  auth_simple.py  caps.py  clerk_api_keys.py  clerk_webhook.py  dashboard.py  events.py  insights.py  migrations.py  pricing.py  projects.py  provider_tiers.py  runs.py  settings.py  stats.py  stripe.py  tenants.py  users.py  voice_stats.py
llm-observe/: .gitignore  GENAI_INSTRUMENTATION.md  Makefile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
llm-observe/backend/: HOW_IT_WORKS.md  clear_data.py  file::memory:  run_complex_workflows.py  test_agents.py  test_gpt_pinecone.py
llm-observe/frontend/: package-lock.json  package.json
llm-observe/tests/: __init__.py  conftest.py  test_instrumentor.py  test_integration.py  test_pricing.py  test_repo.py  test_semantics.py
llm-observe/ui/: .prettierrc  package-lock.json  package.json
sdk/python/: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
(+404 files in other folders)
